<resources>
    <string name="app_name">Museum_app</string>
    <string name="background_image_fail">Background image</string>
    <string name="user">Username</string>
    <string name="logo_a_muse_fail">Logo A Muse</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="protection_RGPD">We will not collect or store any personal information related to your account.</string>
    <string name="reserve_now">Réservez maintenant votre billet</string>
    <string name="reserve_now_link">https://www.ticketlouvre.fr/louvre/b2c/index.cfm/home</string>
    <string name="profilename">Silvia Targa</string>
    <string name="profile_image">profile image</string>
    <string name="settings">Settings</string>
    <string name="Museum_menu">Liste des musées</string>
    <string name="mus_e_louvre">Musée Louvre</string>
    <string name="mus_e_d_orsay">Musée d\'Orsay</string>
    <string name="petit_palais">Petit Palais</string>
    <string name="cit_de_science">Cité de Science</string>
    <string name="mus_e_pinault">Musée Pinault</string>
    <string name="mus_e_pompidou">Musée Pompidou</string>
    <string name="mus_e_d_histoire">Musée d\'Histoire</string>
    <string name="button_du_profile">Button du profile</string>
    <string name="back_button">Back Button</string>
    <string name="histoire_button">Histoire Button</string>
    <string name="home_button">Home Button</string>
    <string name="location_button">Location button</string>
    <string name="info_button">Info Button</string>
    <string name="oeuvres_button">Oeuvres Button</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="changer">Changer</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="_07_49_80_99_75">07 49 80 99 75</string>
    <string name="mail">Mail</string>
    <string name="silvy_gmail_com">silvy@gmail.com</string>
    <string name="address">Address</string>
    <string name="_100_rue_nationale">100, rue Nationale</string>
</resources>