<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/myRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/backgroundcolor"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_icon"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/MuseumMenu"
            style="@style/Museum_app_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:text="@string/Museum_menu"
            android:textIsSelectable="false"
            android:layout_toEndOf="@id/backButton"
            android:layout_toStartOf="@id/ProfileButton"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/backgroundcolor"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon"
            android:contentDescription="@string/button_du_profile" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/myRelativeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/LouvreButton"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mus_e_louvre"
                    android:scaleType="centerCrop"
                    android:src="@drawable/louvre_login" />

                <TextView
                    android:id="@+id/text_Louvre"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/LouvreButton"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/mus_e_louvre"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/LouvreButton"
                    app:layout_constraintLeft_toLeftOf="@id/LouvreButton"
                    app:layout_constraintStart_toStartOf="@id/LouvreButton" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/LouvreButton"
                    android:layout_alignRight="@id/LouvreButton"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="visible"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/OrsayButton"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mus_e_d_orsay"
                    android:scaleType="centerCrop"
                    android:src="@drawable/orsay" />
                <TextView
                    android:id="@+id/text_Orsay"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/OrsayButton"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/mus_e_d_orsay"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/OrsayButton"
                    app:layout_constraintLeft_toLeftOf="@id/OrsayButton"
                    app:layout_constraintStart_toStartOf="@id/OrsayButton" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/OrsayButton"
                    android:layout_alignRight="@id/OrsayButton"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/PetitPalais"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/petit_palais"
                    android:scaleType="centerCrop"
                    android:src="@drawable/petit_palais" />
                <TextView
                    android:id="@+id/text_PetitPalais"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/PetitPalais"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/petit_palais"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/PetitPalais"
                    app:layout_constraintLeft_toLeftOf="@id/PetitPalais"
                    app:layout_constraintStart_toStartOf="@id/PetitPalais" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/PetitPalais"
                    android:layout_alignRight="@id/PetitPalais"
                    android:layout_margin="5dp"

                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/CiteScience"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/cit_de_science"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cite_science_parc" />

                <TextView
                    android:id="@+id/text_CiteScience"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/CiteScience"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/cit_de_science"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/CiteScience"
                    app:layout_constraintLeft_toLeftOf="@id/CiteScience"
                    app:layout_constraintStart_toStartOf="@id/CiteScience" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/CiteScience"
                    android:layout_alignRight="@id/CiteScience"
                    android:layout_margin="5dp"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Pinault"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mus_e_pinault"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pinault_museum" />
                <TextView
                    android:id="@+id/text_Pinault"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/Pinault"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/mus_e_pinault"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/Pinault"
                    app:layout_constraintLeft_toLeftOf="@id/Pinault"
                    app:layout_constraintStart_toStartOf="@id/Pinault" />


                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/Pinault"
                    android:layout_alignRight="@id/Pinault"
                    android:layout_margin="5dp"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/Pompidou"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mus_e_pompidou"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pompidou" />
                <TextView
                    android:id="@+id/text_Pompidou"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/Pompidou"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/mus_e_pompidou"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/Pompidou"
                    app:layout_constraintLeft_toLeftOf="@id/Pompidou"
                    app:layout_constraintStart_toStartOf="@id/Pompidou" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/Pompidou"
                    android:layout_alignRight="@id/Pompidou"
                    android:layout_margin="5dp"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/histoiremuseum"
                    android:layout_width="360dp"
                    android:layout_height="175dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mus_e_d_histoire"
                    android:scaleType="centerCrop"
                    android:src="@drawable/histoire_museum" />

                <TextView
                    android:id="@+id/text_histoiremuseum"
                    android:layout_width="184dp"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/histoiremuseum"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    android:background="#DDFFFFFF"
                    android:padding="5dp"
                    android:text="@string/mus_e_d_histoire"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/histoiremuseum"
                    app:layout_constraintLeft_toLeftOf="@id/histoiremuseum"
                    app:layout_constraintStart_toStartOf="@id/histoiremuseum" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/histoiremuseum"
                    android:layout_alignRight="@id/histoiremuseum"
                    android:layout_margin="5dp"
                    android:visibility="visible" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>